web/css/landing_page.css
footer {
    display:none;
}

body {
    padding-bottom: 0;
}

.btn__subscribe {
    background-color: #536DFE;
}

.btn__connect {
    background-color: #303F9F;
    margin-bottom: 25px;
}

.btn__connect--fb {
    background-color: #3b5998;
    border-radius: 5px;
    padding-left: 15px;
    padding-right: 15px;
    display:inline-block;
    height:30px;
    line-height: 30px;
}

.btn__subscribe, .btn__connect {
    display:inline-block;
    width:100px;
    height:40px;
    line-height: 40px;
}

.hero-img {
    margin-top: -20px;
    background-image: url('../img/hero_img.jpg');
    background-size: cover;
    background-repeat: no-repeat;
    background-position: bottom;
    position: relative;
    height: 100vh;
    opacity:.9;
}

.hero-text {
    position: absolute;
    top: 30%;
    width: 100%;
    text-align: center;
    display: inline-block;
    margin: 0 auto;
}

.catch-phrases {
    background-color: #3F51B5;
    width: 27%;
    margin: 0 auto;
    border: 1px solid #C5CAE9;
    border-radius: 3px;
    padding:10px;
}

.catch-phrases > p {
    font-size: 2.5em;
}

.catch-phrases a {
    color:#fff;
}

.catch-phrases a:hover {
    color:#fff !important;
}

@media screen and (max-width: 768px) {

    .catch-phrases {
        background-color: transparent;
        width: 100%;
        opacity: 1;
        border: none;
    }

    .hero-img {
        background-position: left;
    }

    .hero-text {
        background-color: transparent;
        width: 100%;
        top: 10%;
    }

    .catch-phrases > p {
        font-size: 1.6em;
    }

    .catch-phrases > p:nth-child(3) {
        margin-bottom: 20px;
    }

    .btn__connect {
        margin-bottom: 25px;
        background-color: #3F51B5;
    }

    .btn__connect--fb {
        opacity:.9;
    }
}

@media screen and (min-width: 1024px) and (max-width: 1024px) and (min-height: 1366px) and (max-height: 1366px) {

    .hero-text {
        top:15%;
    }

    .catch-phrases {
        width:40%;
    }

    .catch-phrases > p {
        font-size: 1.8em;
    }

    .hero-img {
        background-position: left;
    }
}

@media screen and (min-width: 768px) and (max-width: 768px) and (min-height: 1024px) and (max-height: 1024px) {

    .hero-text {
        top:15%;
    }

    .catch-phrases {
        background-color: #3F51B5;
        width: 45%;
        opacity: .9;
        border: 1px solid #C5CAE9;
        border-radius: 3px;
    }

    .catch-phrases > p {
        font-size: 1.6em;
    }

    .btn__connect {
        background-color: #303F9F;
    }
}

